# nplinker-webapp

./: .bumpversion.cfg  .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.dev.md  README.md  mypy.ini  pyproject.toml  render.yaml  requirements.dev.txt  requirements.txt  ruff.toml  run_nplinker_docker.sh
.github/workflows/: _ghcr.yml  lint.yml  publish_gh_release.yml  release_ghcr.yml  test.yml
app/: __init__.py  app.py  callbacks.py  config.py  layouts.py  main.py
app/assets/: jquery-3.7.1.min.js  style.css  uploadform.html
nplinker/: linker.py  main.py  nplinker_webapp.toml  searching.py  server_lifecycle.py  tables_functions.py  tables_init.py  tooltips.py
nplinker/templates/: index.html
tests/: __init__.py  test_app.py  test_callbacks.py
testtttt/: pyproject.toml
vscode/: vscode_docstring_google_adapted.mustache
