[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nplinker-webapp"
version = "1.0.1"
description = "NPLinker Web Application"
requires-python = ">=3.10"
dependencies = [
    "nplinker==2.0.0a7",
    "dash==2.18.*",
    "dash-bootstrap-components",
    "dash-mantine-components",
    "dash_bootstrap_templates",
    "numpy",
    "dash-uploader==0.7.0a1",
    "packaging==21.3.0",
    "XlsxWriter",
]

[project.optional-dependencies]
dev = [
    "autoflake",
    "isort",
    "ruff",
    "mypy",
    "yapf",
    "pytest",
    "dash[testing]",
]

[tool.setuptools]
packages = ["app"]