[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nplinker-webapp"
version = "2.0.0"
description = "NPLinker Web Application"
requires-python = ">=3.10"
dependencies = [
    "gunicorn",
    "nplinker==2.0.0a9",
    "dash>=2.18.0,<3.0.0",
    "dash-bootstrap-components>=1.7.1,<2.0.0",
    "dash-mantine-components>=1.0.0,<2.0.0",
    "dash_bootstrap_templates>=2.1.0,<3.0.0",
    "numpy>=2.2.4,<3.0.0",
    "dash-uploader==0.7.0a1",
    "packaging>=21.3.0,<22.0.0",
    "XlsxWriter>=3.2.2,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "autoflake>=2.3.1,<3.0.0",
    "isort>=6.0.1,<7.0.0",
    "ruff>=0.11.0,<1.0.0",
    "mypy>=1.15.0,<2.0.0",
    "yapf>=0.43.0,<1.0.0",
    "pytest>=8.3.5,<9.0.0",
    "dash[testing]",
]

[tool.setuptools]
packages = ["app"]